env file config cleared

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # -----------------------------------------------------------------------------
 # BASIC CONFIG:
 # -----------------------------------------------------------------------------
-NEXT_PUBLIC_API_URL="http://localhost:3100/api"
-NEXT_PUBLIC_NEXT_URL=http://localhost:3100
-MONGODB_URI=mongodb+srv://digitalabdulis:jOaaPuCHbHDmUH8E@cluster0.qpzh9.mongodb.net/?retryWrites=true&w=majority
+NEXT_PUBLIC_API_URL=
+NEXT_PUBLIC_NEXT_URL=
+MONGODB_URI=
